# ilfx

./: .gitignore  CHAISCRIPT_CLI.md  CMakeLists.txt  README.md  chaitest.chai  copy_kpmr_files.sh  generate_update_sql.py  inherent_Fsis_integration.xml  inherentds_asuransi_out.xml  inherentds_hukum_out.xml  inherentds_imbalhasil_out.xml  inherentds_intragroup_out.xml  inherentds_investasi_out.xml  inherentds_kepatuhan_out.xml  inherentds_likuiditas_out.xml  inherentds_operasional_out.xml  inherentds_pasar_out.xml  inherentds_reputasi_out.xml  inherentds_stratejik_out.xml  inherentkredit_ids.xml  kpmrconsole.xml  kpmrds_asuransi_out.xml  kpmrds_hukum_out.xml  kpmrds_imbalhasil_out.xml  kpmrds_intragroup_out.xml  kpmrds_investasi_out.xml  kpmrds_kepatuhan_out.xml  kpmrds_kredit_out.xml  kpmrds_likuiditas_out.xml  kpmrds_operasional_out.xml  kpmrds_pasar_out.xml  kpmrds_reputasi_out.xml  kpmrds_stratejik_out.xml  replacements.json  riskprofile_asuransi_output.txt  riskprofile_hukum_output.txt  riskprofile_imbalhasil_output.txt  riskprofile_intragroup_output.txt  riskprofile_investasi_output.txt  riskprofile_kepatuhan_output.txt  (+12 more)
antlr4/: Threshold.g4
antlr4/.antlr/: ThresholdLexer.interp  ThresholdLexer.java  ThresholdLexer.tokens  ThresholdParser.java
chaiscripts/: ids_variant1.chaiscript
examples/: rating_threshold_example.cpp
sampledata/: example.chai  inherent_riskprofile.xml  inherentds.xml  inherentds_gen.xml  inherentds_output.xml  kpmr_riskprofile.xml  kpmrsource.json  kpmrsource.xml  weighing.xml
src/: EvalVisitor.hpp  allheaders.hpp  chaicli.hpp  chaicli_test.cpp  chaiscript_cli.cpp  exprtk_cli.cpp  exprtkevaluator.cpp  exprtkevaluator.h  ilfx_cli.cpp  inherent_datasource.hpp  inherent_datasource_test.cpp  kpmr_cli.cpp  kpmr_datasource.hpp  riskprofile.hpp  riskprofile_cli.cpp  scoreratingparser.cpp  scoreratingparser.hpp  scoreratingparser_cli.cpp  test_rating.cpp  threshold_cli.cpp
testdata/: inherent_riskpro.xml  inherentds_asuransi.xml  inherentds_hukum.xml  inherentds_imbalhasil.xml  inherentds_intragroup.xml  inherentds_investasi.xml  inherentds_kepatuhan.xml  inherentds_kredit.xml  inherentds_likuiditas.xml  inherentds_operasional.xml  inherentds_pasar.xml  inherentds_reputasi.xml  inherentds_stratejik.xml  kpmr_reputasi.xml  kpmr_riskpro.xml  kpmrds_asuransi.xml  kpmrds_hukum.xml  kpmrds_imbalhasil.xml  kpmrds_intragroup.xml  kpmrds_investasi.xml  kpmrds_kepatuhan.xml  kpmrds_kredit.xml  kpmrds_likuiditas.xml  kpmrds_operasional.xml  kpmrds_pasar.xml  kpmrds_reputasi.xml  kpmrds_stratejik.xml
xsd/: InherentDataSource.xsd  InherentRiskProfile.xsd  KPMRDataSource.xsd  KPMRRiskProfile.xsd  Weight.xsd
